Added new analytics

--- a/themes/PaperMod/layouts/_default/single.html
+++ b/themes/PaperMod/layouts/_default/single.html
@@ -62,7 +62,7 @@
   {{- end }}
 <!-- Giscus Comments -->
 {{ if .Params.comments }}
-<div id="comments">
+<div id="comments" style="margin-top: 20px;">
   <script src="https://giscus.app/client.js"
         data-repo="kirpokik/myblog"
         data-repo-id="R_kgDOPATcDw"
