--- a/themes/PaperMod/layouts/partials/templates/schema_json.html
+++ b/themes/PaperMod/layouts/partials/templates/schema_json.html
@@ -2,21 +2,17 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "{{- ( site.Params.schema.publisherType | default "Organization") | title -}}",
-  "name": {{ site.Title }},
-  "url": {{ site.Home.Permalink }},
-  "description": {{ site.Params.description | plainify | truncate 180 | safeHTML }},
-  {{- if (eq site.Params.schema.publisherType "Person") }}
-  "image": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }},
-  {{- else }}
-  "logo": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }},
-  {{- end }}
+  "@type": "Person",
+  "name": "Kostiantyn Sorokin",
+  "url": "{{ site.Home.Permalink }}",
+  "description": "{{ site.Params.description | plainify | truncate 180 | safeHTML }}",
+  "image": "{{ site.Params.assets.favicon | default "favicon.ico" | absURL }}",
   "sameAs": [
     {{- if site.Params.schema.sameAs }}
-      {{ range $i, $e := site.Params.schema.sameAs }}{{ if $i }}, {{ end }}{{ trim $e " " }}{{ end }}
-    {{- else}}
-      {{ range $i, $e := site.Params.SocialIcons }}{{ if $i }}, {{ end }}{{ trim $e.url " " | safeURL }}{{ end }}
-    {{- end}}
+      {{ range $i, $e := site.Params.schema.sameAs }}{{ if $i }}, {{ end }}"{{ trim $e " " }}"{{ end }}
+    {{- else }}
+      {{ range $i, $e := site.Params.SocialIcons }}{{ if $i }}, {{ end }}"{{ trim $e.url " " | safeURL }}"{{ end }}
+    {{- end }}
   ]
 }
 </script>
@@ -114,8 +110,8 @@
     "@id": {{ .Permalink | safeHTML }}
   },
   "publisher": {
-    "@type": "{{- ( site.Params.schema.publisherType | default "Organization") | title -}}",
-    "name": {{ site.Title }},
+    "@type": "Person",
+    "name": "Kostiantyn Sorokin"
     "logo": {
       "@type": "ImageObject",
       "url": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }}
