--- a/themes/PaperMod/layouts/partials/templates/schema_json.html
+++ b/themes/PaperMod/layouts/partials/templates/schema_json.html
@@ -111,7 +111,7 @@
   },
   "publisher": {
     "@type": "Person",
-    "name": "Kostiantyn Sorokin"
+    "name": "Kostiantyn Sorokin",
     "logo": {
       "@type": "ImageObject",
       "url": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }}
