--- a/static/css/extended/theme-vars-override.css
+++ b/static/css/extended/theme-vars-override.css
@@ -20,17 +20,19 @@
 }
 
 
-
 body {
   font-family: 'Atkinson Hyperlegible', sans-serif;
-  
-}
-
-* {
-  font-family: 'Atkinson Hyperlegible', sans-serif !important;
 }
 html {
   scroll-behavior: smooth;
+}
+/* 🔥 Это ставь ниже! */
+pre,
+.chroma pre,
+.chroma code {
+  font-family: monospace !important;
+  font-size: 14px !important;
+  line-height: 1.5;
 }
 
 .first-entry {
@@ -41,6 +43,10 @@ html {
   padding-inline-start: 20px;
 }
 
+.first-entry .entry-header h1 {
+    font-size: 34px !important;
+    line-height: 1.3;
+}
 
 .home-info .entry-content a, .bio a {
   box-shadow: 0 1px;
@@ -71,6 +77,11 @@ html {
   font-weight: 500;
 }
 
+.post-content table thead tr {
+    border-radius: 4px;
+    background-color: var(--code-bg);
+}
+
 .cursor {
   display: inline-block;
   width: 5px;             /* Толщина курсора */
@@ -79,7 +90,7 @@ html {
   background-color: var(--primary);
   animation: blink 1s steps(1) infinite;
   vertical-align: middle;
- 
+
 }
 
 .post-content h2:not(.timeline h2) {
